# secret-share

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
secret_share/: __init__.py  core.py
tests/: test_secret_share.py
